--- a/views/signup.html
+++ b/views/signup.html
@@ -155,19 +155,19 @@
 
 
   <main class="form-signin w-100 m-auto">
-    <form>
+    <form method="post" action="/auth/signup">
       <h1 class="h3 mb-3 fw-normal">Please Sign Up</h1>
 
       <div class="form-floating">
-        <input type="name" class="form-control" id="floatingInput" placeholder="Name">
+        <input name="name" type="name" class="form-control" id="floatingInput" placeholder="Name">
         <label for="floatingInput">Name</label>
       </div>
       <div class="form-floating">
-        <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+        <input name="email" type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
         <label for="floatingInput">Email address</label>
       </div>
       <div class="form-floating">
-        <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+        <input name="password" type="password" class="form-control" id="floatingPassword" placeholder="Password">
         <label for="floatingPassword">Password</label>
       </div>
 
